have js9 load the saved image that has bad pixel map applied rather than raw off indi feed

--- a/camsrv/web_resources/templates/f5wfs.html
+++ b/camsrv/web_resources/templates/f5wfs.html
@@ -114,7 +114,7 @@
 					JS9.CloseImage();
 
 					console.log("loading JS9")
-					JS9.Load(indi.CCD1, {onload: function() {
+					JS9.Load("latest", {onload: function() {
 							if (cmap != null) {
 								JS9.SetColormap(cmap['colormap'], cmap['contrast'], cmap['bias']);
 
